--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
         </div>
     </section>
    
+    <!-- Upcoming Contests Section -->
+    <section class="upcoming-contests">
+        <div class="container">
+            <h2 class="section-title">Upcoming Contests</h2>
+            <div class="contest-grid">
+                <div class="contest-card">
+                    <h3>General Knowledge Quiz</h3>
+                    <p>Date: July 15, 2025</p>
+                    <p>Prize Pool: ₹5,000</p>
+                    <button class="btn btn-primary">Join Now</button>
+                </div>
+                <div class="contest-card">
+                    <h3>Science & Tech Challenge</h3>
+                    <p>Date: July 18, 2025</p>
+                    <p>Prize Pool: ₹7,500</p>
+                    <button class="btn btn-primary">Join Now</button>
+                </div>
+                <div class="contest-card">
+                    <h3>History Buff Battle</h3>
+                    <p>Date: July 20, 2025</p>
+                    <p>Prize Pool: ₹3,000</p>
+                    <button class="btn btn-primary">Join Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- How It Works -->
     <section class="how-it-works">
         <div class="container">
@@ -99,6 +126,59 @@
                     <h3>Daily Challenges</h3>
                     <p>New contests every day to keep you engaged</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="container">
+            <h2 class="section-title">What Our Users Say</h2>
+            <div class="testimonial-grid">
+                <div class="testimonial-card">
+                    <p class="quote">"QuizChamp is amazing! I've won several contests and the withdrawals are super fast. Highly recommended!"</p>
+                    <p class="author">- Priya S.</p>
+                </div>
+                <div class="testimonial-card">
+                    <p class="quote">"The variety of quizzes and the fair play system make QuizChamp my go-to app for earning while learning."</p>
+                    <p class="author">- Rahul K.</p>
+                </div>
+                <div class="testimonial-card">
+                    <p class="quote">"Finally, a platform where my knowledge pays off! The daily challenges keep me hooked."</p>
+                    <p class="author">- Amit V.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section class="cta-section">
+        <div class="container">
+            <h2>Ready to Join the QuizChamp Community?</h2>
+            <p>Sign up now and start winning exciting prizes!</p>
+            <a href="auth/login.html" class="btn btn-primary btn-large">Get Started Today</a>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section">
+        <div class="container">
+            <h2 class="section-title">Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <h3>How do I join a contest?</h3>
+                <p>Simply sign up, browse the upcoming contests, and click 'Join Now' on the contest you wish to participate in.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How are winners determined?</h3>
+                <p>Winners are determined based on their score and the time taken to complete the quiz. Higher score and faster completion lead to higher ranks.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How do I withdraw my winnings?</h3>
+                <p>You can withdraw your winnings instantly to your linked payment methods through your wallet section.</p>
+            </div>
+            <div class="faq-item">
+                <h3>Is there a fee to join contests?</h3>
+                <p>Some contests may have a small entry fee, while others are free to join. Details are provided for each contest.</p>
             </div>
         </div>
     </section>
@@ -149,6 +229,6 @@
     <!-- Wallet Modal -->
     
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html> 
