--- a/admin/pages/users.html
+++ b/admin/pages/users.html
@@ -5,279 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users Management - QuizArena Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
-    <style>
-        .search-container {
-            margin-bottom: 2rem;
-            position: relative;
-        }
-
-        .search-input {
-            width: 100%;
-            max-width: 500px;
-            padding: 1rem 1.5rem;
-            padding-left: 3rem;
-            background-color: var(--bg-tertiary);
-            border: 2px solid var(--border-color);
-            border-radius: 12px;
-            color: var(--text-primary);
-            transition: all 0.3s ease;
-            font-size: 1rem;
-        }
-
-        .search-input:focus {
-            outline: none;
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.15);
-            background-color: var(--bg-secondary);
-        }
-
-        .search-icon {
-            position: absolute;
-            left: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--text-secondary);
-            font-size: 1.2rem;
-        }
-
-        .table-container {
-            background: var(--bg-secondary);
-            border-radius: 16px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            margin-top: 1rem;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: separate;
-            border-spacing: 0;
-        }
-
-        th {
-            background-color: var(--bg-tertiary);
-            padding: 1.2rem 1.5rem;
-            text-align: left;
-            font-weight: 600;
-            color: var(--text-primary);
-            border-bottom: 2px solid var(--border-color);
-            position: sticky;
-            top: 0;
-            z-index: 10;
-        }
-
-        td {
-            padding: 1.2rem 1.5rem;
-            border-bottom: 1px solid var(--border-color);
-            color: var(--text-primary);
-            transition: background-color 0.2s ease;
-        }
-
-        tr:hover td {
-            background-color: var(--bg-tertiary);
-        }
-
-        .user-avatar {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: var(--primary-color);
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 600;
-            margin-right: 1rem;
-        }
-
-        .user-info {
-            display: flex;
-            align-items: center;
-        }
-
-        .user-name {
-            font-weight: 600;
-            color: var(--text-primary);
-        }
-
-        .user-email {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-            margin-top: 0.2rem;
-        }
-
-        .wallet-balance {
-            font-weight: 600;
-            color: var(--success-color);
-        }
-
-        .challenges-count {
-            background-color: var(--primary-color);
-            color: white;
-            padding: 0.4rem 0.8rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            font-weight: 500;
-        }
-
-        .action-btn {
-            padding: 0.6rem 1rem;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 500;
-            transition: all 0.2s ease;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .view-btn {
-            background-color: var(--primary-color);
-            color: white;
-        }
-
-        .view-btn:hover {
-            background-color: var(--primary-color-dark);
-            transform: translateY(-2px);
-        }
-
-        .challenge-history {
-            max-height: 400px;
-            overflow-y: auto;
-            padding: 1rem;
-        }
-
-        .challenge-row {
-            background: var(--bg-secondary);
-            padding: 1rem;
-            border-radius: 12px;
-            margin-bottom: 1rem;
-            border: 1px solid var(--border-color);
-            transition: all 0.2s ease;
-        }
-
-        .challenge-row:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .challenge-status {
-            padding: 0.4rem 1rem;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .challenge-status.completed {
-            background-color: var(--success-color);
-            color: white;
-        }
-
-        .challenge-status.ongoing {
-            background-color: var(--warning-color);
-            color: white;
-        }
-
-        .challenge-status.cancelled {
-            background-color: var(--danger-color);
-            color: white;
-        }
-
-        .modal-content {
-            background: var(--bg-primary);
-            border-radius: 20px;
-            max-width: 800px;
-            width: 90%;
-        }
-
-        .modal-header {
-            padding: 1.5rem;
-            border-bottom: 2px solid var(--border-color);
-        }
-
-        .modal-header h2 {
-            font-size: 1.5rem;
-            color: var(--text-primary);
-        }
-
-        .close-btn {
-            background: none;
-            border: none;
-            color: var(--text-secondary);
-            font-size: 1.5rem;
-            cursor: pointer;
-            transition: color 0.2s ease;
-        }
-
-        .close-btn:hover {
-            color: var(--danger-color);
-        }
-
-        /* Loading Animation */
-        .loading-spinner {
-            display: none;
-            width: 40px;
-            height: 40px;
-            border: 4px solid var(--bg-tertiary);
-            border-top: 4px solid var(--primary-color);
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 2rem auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Empty State */
-        .empty-state {
-            text-align: center;
-            padding: 3rem;
-            color: var(--text-secondary);
-        }
-
-        .empty-state i {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            color: var(--text-tertiary);
-        }
-    </style>
+    <link rel="stylesheet" href="../css/users.css">
 </head>
 <body>
     <div class="sidebar">
-        <div class="sidebar-header">
-            <h1>QuizChamp <span class="fire">🔥</span></h1>
-        </div>
-        <ul class="nav-links">
-            <li class="nav-item" onclick="window.location.href='../index.html'">
-                <i class="fas fa-home"></i>
-                Dashboard
-            </li>
-            <li class="nav-item active">
-                <i class="fas fa-users"></i>
-                Users
-            </li>
-            <li class="nav-item" onclick="window.location.href='challenges.html'">
-                <i class="fas fa-trophy"></i>
-                Challenges
-            </li>
-            <li class="nav-item" onclick="window.location.href='quizzes.html'">
-                <i class="fas fa-question-circle"></i>
-                Questions
-            </li>
+        <h2>Admin Panel</h2>
+        <ul>
+            <li><a href="../index.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li><a href="users.html"><i class="fas fa-users"></i> Users</a></li>
+            <li><a href="quizzes.html"><i class="fas fa-question-circle"></i> Quizzes</a></li>
+            <li><a href="challenges.html"><i class="fas fa-trophy"></i> Challenges</a></li>
+            <li><a href="withdrawals.html"><i class="fas fa-wallet"></i> Withdrawals</a></li>
+            <li><a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
-        <div class="sidebar-footer">
-            <button class="logout-btn" id="logout-btn">
-                <i class="fas fa-sign-out-alt"></i>
-                Logout
-            </button>
-        </div>
     </div>
 
     <div class="main-content">
@@ -286,26 +26,14 @@
             <input type="text" class="search-input" id="search-input" placeholder="Search users by name or email...">
         </div>
 
-        <div class="table-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>User</th>
-                        <th>Wallet Balance</th>
-                        <th>Challenges</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="users-table-body">
-                    <!-- Users will be populated here -->
-                </tbody>
-            </table>
-            <div class="loading-spinner" id="loading-spinner"></div>
-            <div class="empty-state" id="empty-state" style="display: none;">
-                <i class="fas fa-users"></i>
-                <h3>No Users Found</h3>
-                <p>Try adjusting your search criteria</p>
-            </div>
+        <div class="user-cards-container" id="users-container">
+            <!-- User cards will be populated here -->
+        </div>
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="empty-state" id="empty-state" style="display: none;">
+            <i class="fas fa-users"></i>
+            <h3>No Users Found</h3>
+            <p>Try adjusting your search criteria</p>
         </div>
     </div>
 
